<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wildlife</groupId>
    <artifactId>simulation</artifactId>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21.0.11</javafx.version>
        <javafx.platform>win</javafx.platform>
        <lwjgl.version>3.3.6</lwjgl.version>
        <lwjgl.natives>natives-windows</lwjgl.natives>
        <joml.version>1.10.8</joml.version>
    </properties>

    <profiles>

        <profile>
            <id>windows</id>
            <activation>
                <os> <family>Windows</family></os>
            </activation>
            <properties>
                <app.icon> src/main/resources/wildlife/view/ui/assets/images/App_Icon.ico </app.icon>
                <lwjgl.natives>natives-windows</lwjgl.natives>
                <javafx.platform>win</javafx.platform>
            </properties>
        </profile>

        <!-- macOS x86_64 -->
        <profile>
            <id>mac</id>
            <activation>
                <os><family>mac</family><arch>x86_64</arch></os>
            </activation>
            <properties>
                <app.icon>src/main/resources/wildlife/view/ui/assets/images/App_Icon.icns</app.icon>
                <lwjgl.natives>natives-macos</lwjgl.natives>
                <javafx.platform>mac</javafx.platform>
            </properties>
        </profile>

        <!-- macOS Apple Silicon (aarch64) -->
        <profile>
            <id>mac-arm64</id>
            <activation>
                <os><family>mac</family><arch>aarch64</arch></os>
            </activation>
            <properties>
                <app.icon>src/main/resources/wildlife/view/ui/assets/images/App_Icon.icns</app.icon>
                <lwjgl.natives>natives-macos-arm64</lwjgl.natives>
                <javafx.platform>mac-aarch64</javafx.platform>
            </properties>
        </profile>

        <!-- Linux -->
        <profile>
            <id>linux</id>
            <activation>
                <os><name>Linux</name></os>
            </activation>
            <properties>
                <app.icon>src/main/resources/wildlife/view/ui/assets/images/App_Icon.png</app.icon>
                <lwjgl.natives>natives-linux</lwjgl.natives>
                <javafx.platform>linux</javafx.platform>
            </properties>
        </profile>

    </profiles>

    <dependencies>

        <!-- JavaFX Controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- JavaFX Swing -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Lightweight Java game lib -->


        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
            <version>${lwjgl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-opengl</artifactId>
            <version>${lwjgl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
            <version>${lwjgl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
            <version>${lwjgl.version}</version>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-opengl</artifactId>
            <version>${lwjgl.version}</version>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
            <version>${lwjgl.version}</version>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>

        <dependency>
            <groupId>org.joml</groupId>
            <artifactId>joml</artifactId>
            <version>${joml.version}</version>
        </dependency>



    </dependencies>

    <build>
        <plugins>

            <!-- Java Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>

                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <!-- JavaFX Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>
                    <mainClass>wildlife.core.Main</mainClass>
                    <!-- Tạo custom runtime -->
                    <launcher>WildlifeSimulation</launcher>

                    <jlinkZipName>WildlifeSimulation</jlinkZipName>

                    <jlinkImageName>WildlifeSimulation</jlinkImageName>

                    <stripDebug>true</stripDebug>

                    <noHeaderFiles>true</noHeaderFiles>

                    <noManPages>true</noManPages>
                </configuration>

                <executions>

                    <!-- Build runtime image -->
                    <execution>
                        <id>create-runtime-image</id>

                        <goals>
                            <goal>jlink</goal>
                        </goals>
                    </execution>

                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>wildlife.core.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>wildlife.core.Main</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/versions/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>

            </plugin>


        </plugins>
    </build>

</project>